--- a/src/main/resources/dart2-v3template/apilib.mustache
+++ b/src/main/resources/dart2-v3template/apilib.mustache
@@ -1,6 +1,7 @@
 library {{pubName}}.api;
 
 import 'dart:async';
+import 'dart:convert';
 import 'package:dio/dio.dart';
 import 'package:openapi_dart_common/openapi.dart';
 import 'package:collection/collection.dart';
