--- a/src/main/resources/dart2-v3template/api_test.mustache
+++ b/src/main/resources/dart2-v3template/api_test.mustache
@@ -6,7 +6,7 @@ import 'package:test/test.dart';
 
 /// tests for {{classname}}
 void main() {
-  var instance = {{classname}}(ApiClient(deserializeDelegate: LocalApiClient()));
+  var instance = {{classname}}(ApiClient());
 
   group('tests for {{classname}}', () {
     {{#operation}}
