--- a/src/main/resources/dart2-v3template/pubspec.mustache
+++ b/src/main/resources/dart2-v3template/pubspec.mustache
@@ -5,7 +5,9 @@ environment:
   sdk: '>=2.7.0 <3.0.0'
 dependencies:
   dio: '>=3.0.3 <4.0.0'
-  openapi_dart_common: ^3.0.1
+#  openapi_dart_common: ^3.0.1
+  openapi_dart_common:
+    path: /Users/richard/projects/dart/openapi_dart_common
   {{#x-dart-deps}}
   {{{.}}}
   {{/x-dart-deps}}
