--- a/src/main/resources/dart2-v3template/api.mustache
+++ b/src/main/resources/dart2-v3template/api.mustache
@@ -4,7 +4,6 @@ part of {{pubName}}.api;
 
 class {{classname}} {
   final ApiClient apiClient;
-  final delegate = LocalApiClient();
 
   {{classname}}(this.apiClient) : assert(apiClient != null);
 
@@ -69,7 +68,7 @@ class {{classname}} {
       headerParams['Content-Type'] = contentTypes[0];
     }
     if (postBody != null) {
-      postBody = delegate.serialize(postBody);
+      postBody = LocalApiClient.serialize(postBody);
     }
   {{/vendorExtensions.x-dart-consumes-json}}
   {{#vendorExtensions.x-dart-consumes-form}}
@@ -79,7 +78,7 @@ class {{classname}} {
     final formData = <String, String>{};
     {{#formParams}}
       {{^isFile}}
-    formData['{{baseName}}'] = Uri.encodeFull(delegate.parameterToString({{paramName}}));
+    formData['{{baseName}}'] = Uri.encodeFull(LocalApiClient.parameterToString({{paramName}}));
       {{/isFile}}
     {{/formParams}}
     {{#hasFormParams}}
@@ -95,7 +94,7 @@ class {{classname}} {
     {{#formParams}}
       {{^isFile}}
     if ({{paramName}} != null) {
-      formData['{{baseName}}'] = Uri.encodeFull(delegate.parameterToString({{paramName}}));
+      formData['{{baseName}}'] = Uri.encodeFull(LocalApiClient.parameterToString({{paramName}}));
     }
       {{/isFile}}
       {{#isFile}}
@@ -124,18 +123,18 @@ class {{classname}} {
   {{#vendorExtensions.x-dart-produces-json}}
       {{#isListContainer}}
         {{#returnType}}
-      return (delegate.deserializeFromString(await decodeBodyBytes(response), '{{{returnType}}}') as List).map((item) => item as {{returnBaseType}}).toList();
+      return (LocalApiClient.deserializeFromString(await decodeBodyBytes(response), '{{{returnType}}}') as List).map((item) => item as {{returnBaseType}}).toList();
         {{/returnType}}
       {{/isListContainer}}
       {{^isListContainer}}
         {{#isMapContainer}}
           {{#returnType}}
-      return {{{returnType}}}.from(delegate.deserializeFromString(await decodeBodyBytes(response), '{{{returnType}}}'));
+      return {{{returnType}}}.from(LocalApiClient.deserializeFromString(await decodeBodyBytes(response), '{{{returnType}}}'));
           {{/returnType}};
         {{/isMapContainer}}
         {{^isMapContainer}}
           {{#returnType}}
-      return delegate.deserializeFromString(await decodeBodyBytes(response), '{{{returnType}}}') as {{{returnType}}};
+      return LocalApiClient.deserializeFromString(await decodeBodyBytes(response), '{{{returnType}}}') as {{{returnType}}};
           {{/returnType}}
         {{/isMapContainer}}
       {{/isListContainer}}
